kubernetes/orion/manifests/default/homer/homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
