kubernetes/orion/manifests/default/homer/homer-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-route
  namespace: homer
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - "dashboard.bou1der.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer-service
          port: 8080
